Fix BocCheckBox alignment (RM-1852)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@14936 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocCheckBox.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocCheckBox.css
@@ -25,6 +25,10 @@
 
 .bocCheckBox img
 {
-  margin-left: 0px;
+  margin-left: 4px;
   padding: 0px;
 }
+/* modern browsers only (IE8+, Safari, Chrome, FF) */
+html>/**/body .bocCheckBox img {
+	margin-left: 0px;
+} 
